--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,9 +12,8 @@ repository = "https://github.com/lufixSch/hunter_and_prey"
 [dependencies]
 bevy = { version = "0.9.1", features = ["dynamic"] }
 bevy-inspector-egui = "0.17.0"
-bevy_sepax2d = { verison="0.4.1", features= ["debug"] }
+bevy_rapier2d = { version = "0.20.0", features = ["debug-render-2d", "serde-serialize"] }
 rand = "0.8.5"
-sepax2d = "0.3.8"
 
 # Enable a small amount of optimization in debug mode
 [profile.dev]
@@ -23,3 +22,6 @@ opt-level = 1
 # Enable high optimizations for dependencies (incl. Bevy), but not for our code:
 [profile.dev.package."*"]
 opt-level = 3
+
+[profile.release]
+codegen-units = 1
